# codespaces

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  docker-compose.nginx.yml  docker-compose.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  on_create_command.sh
backend/: Dockerfile  pyproject.toml  wait-for-postgres.sh
backend/config/: settings.py
frontend/: Dockerfile  package-lock.json
nginx/conf/: default.conf
